--- a/index.html
+++ b/index.html
@@ -16,7 +16,17 @@
 	<body>
 		<!-- applying redundant-seeming class name because we want one for everyone element -->
 		<header class="header">
-			Some text..
+			<!-- putting img inside div for easier positioning -->
+			<div class="logo-box">
+				<img src="./img/logo-white.png" alt="natours logo white" class="logo">
+			</div>
+			<div class="text-box">
+				<h1 class="heading-primary">
+					<span class="heading-primary-main">Outdoors</span>
+					<span class="heading-primary-sub">is where life happens</span>
+				</h1>
+			</div>
+			
 		</header>
 			
 	</body>
