--- a/index.html
+++ b/index.html
@@ -14,18 +14,22 @@
 		<title>Natours | Exciting tours for adventurous people</title>
 	</head>
 	<body>
-		<!-- applying redundant-seeming class name because we want one for everyone element -->
+		<!-- applying redundant-seeming class name because we want one for every element -->
 		<header class="header">
 			<!-- putting img inside div for easier positioning -->
-			<div class="logo-box">
-				<img src="./img/logo-white.png" alt="natours logo white" class="logo">
+			<!-- 'header' is the block, 'logo-box' is the element -->
+			<div class="header__logo-box">
+				<img src="./img/logo-white.png" alt="natours logo white" class="header__logo">
 			</div>
-			<div class="text-box">
+			<div class="header__text-box">
+				<!-- remains a stand-alone block even though nested within <header> block -->
+				<!-- could potentially be reused elsewhere -->
 				<h1 class="heading-primary">
-					<span class="heading-primary-main">Outdoors</span>
-					<span class="heading-primary-sub">is where life happens</span>
+					use 
+					<span class="heading-primary--main">Outdoors</span>
+					<span class="heading-primary--sub">is where life happens</span>
 				</h1>
-				<a href="#" class="btn btn-white btn-animated">Discover our tours</a>
+				<a href="#" class="btn btn--white btn--animated">Discover our tours</a>
 			</div>
 			
 		</header>
