add section-about div to index.html

--- a/index.html
+++ b/index.html
@@ -33,6 +33,11 @@
 			</div>
 			
     </header>
+    <main>
+      <section class="section-about">
+        
+      </section>
+    </main>
     <!--     
     <section class="grid-test">
       <div class="row">
