add h2 to section-about

--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
     </header>
     <main>
       <section class="section-about">
-        
+        <h2 class="heading-secondary">
+          Exciting Tours for Adventurous People
+        </h2>
       </section>
     </main>
     <!--     
