Center h2 with utility class
Wrapped the heading-secondary h2 in a utility class div for centering. Added first utlity class styling in _utilities.scss for .u-center-text.

--- a/index.html
+++ b/index.html
@@ -35,9 +35,11 @@
     </header>
     <main>
       <section class="section-about">
-        <h2 class="heading-secondary">
-          Exciting Tours for Adventurous People
-        </h2>
+        <div class="u-center-text">
+          <h2 class="heading-secondary">
+            Exciting Tours for Adventurous People
+          </h2>
+      </div>
       </section>
     </main>
     <!--     
