--- a/index.html
+++ b/index.html
@@ -35,12 +35,21 @@
     </header>
     <main>
       <section class="section-about">
-        <div class="u-center-text">
+        <div class="u-center-text u-margin-bottom-8">
           <h2 class="heading-secondary">
             Exciting Tours for Adventurous People
           </h2>
       </div>
+      <div class="row">
+        <div class="col-1-of-2">
+          Text Content
+        </div>
+        <div class="col-1-of-2">
+          Image Composition
+        </div>
+      </div>
       </section>
+      
     </main>
     <!--     
     <section class="grid-test">
