add two each of h3 and paragraph elements to .row div of .section-about

--- a/index.html
+++ b/index.html
@@ -42,7 +42,14 @@
       </div>
       <div class="row">
         <div class="col-1-of-2">
-          Text Content
+          <h3 class="heading-tertiary">You're going to fall in love with nature</h3>
+          <p class="paragraph">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Est, distinctio assumenda ducimus sunt molestiae vel natus nihil sapiente numquam tempore ipsa qui corrupti exercitationem voluptate dolore cupiditate asperiores libero atque.
+          </p>
+          <h3 class="heading-tertiary">Experience adventures like you never have before</h3>
+          <p class="paragraph">
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laboriosam itaque ex nulla inventore nemo aliquam ea nisi temporibus ipsam corrupti? Exercitationem explicabo voluptatum illum nam sapiente autem quod, a delectus?
+          </p>
         </div>
         <div class="col-1-of-2">
           Image Composition
