--- a/index.html
+++ b/index.html
@@ -35,18 +35,18 @@
     </header>
     <main>
       <section class="section-about">
-        <div class="u-center-text u-margin-bottom-8">
+        <div class="u-center-text u-margin-bottom-big">
           <h2 class="heading-secondary">
             Exciting Tours for Adventurous People
           </h2>
       </div>
       <div class="row">
         <div class="col-1-of-2">
-          <h3 class="heading-tertiary">You're going to fall in love with nature</h3>
+          <h3 class="heading-tertiary u-margin-bottom-small">You're going to fall in love with nature</h3>
           <p class="paragraph">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Est, distinctio assumenda ducimus sunt molestiae vel natus nihil sapiente numquam tempore ipsa qui corrupti exercitationem voluptate dolore cupiditate asperiores libero atque.
           </p>
-          <h3 class="heading-tertiary">Experience adventures like you never have before</h3>
+          <h3 class="heading-tertiary u-margin-bottom-small">Experience adventures like you never have before</h3>
           <p class="paragraph">
             Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laboriosam itaque ex nulla inventore nemo aliquam ea nisi temporibus ipsam corrupti? Exercitationem explicabo voluptatum illum nam sapiente autem quod, a delectus?
           </p>
