--- a/index.html
+++ b/index.html
@@ -48,8 +48,9 @@
           </p>
           <h3 class="heading-tertiary u-margin-bottom-small">Experience adventures like you never have before</h3>
           <p class="paragraph">
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laboriosam itaque ex nulla inventore nemo aliquam ea nisi temporibus ipsam corrupti? Exercitationem explicabo voluptatum illum nam sapiente autem quod, a delectus?
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laboriosam itaque ex nulla inventore nemo aliquam ea nisi temporibus ipsam corrupti?
           </p>
+          <a href="#" class="btn-text">Learn more &rarr;</a>
         </div>
         <div class="col-1-of-2">
           Image Composition
