--- a/index.html
+++ b/index.html
@@ -53,7 +53,11 @@
           <a href="#" class="btn-text">Learn more &rarr;</a>
         </div>
         <div class="col-1-of-2">
-          Image Composition
+          <div class="composition">
+            <img src="" alt="" class="composition__photo composition__photo--p1">
+            <img src="" alt="" class="composition__photo composition__photo--p2">
+            <img src="" alt="" class="composition__photo composition__photo--p3">
+          </div>
         </div>
       </div>
       </section>
