--- a/index.html
+++ b/index.html
@@ -61,6 +61,20 @@
         </div>
       </div>
       </section>
+      <section class="features">
+        
+        <div class="row">
+          <div class="col-1-of-4">
+            <div class="feature-box">
+              <i class="feature-box__icon icon-basic-world"></i>
+              <h3 class="heading-tertiary">Explore the world</h3>
+              <p class="feature-box__text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum corporis labore quis eveniet laboriosam fugiat
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
       
     </main>
     <!--     
