add basic feature box styling in features section

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         </div>
       </div>
       </section>
-      <section class="features">
+      <section class="section-features">
         
         <div class="row">
           <div class="col-1-of-4">
