--- a/index.html
+++ b/index.html
@@ -39,27 +39,27 @@
           <h2 class="heading-secondary">
             Exciting Tours for Adventurous People
           </h2>
-      </div>
-      <div class="row">
-        <div class="col-1-of-2">
-          <h3 class="heading-tertiary u-margin-bottom-small">You're going to fall in love with nature</h3>
-          <p class="paragraph">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Est, distinctio assumenda ducimus sunt molestiae vel natus nihil sapiente numquam tempore ipsa qui corrupti exercitationem voluptate dolore cupiditate asperiores libero atque.
-          </p>
-          <h3 class="heading-tertiary u-margin-bottom-small">Experience adventures like you never have before</h3>
-          <p class="paragraph">
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laboriosam itaque ex nulla inventore nemo aliquam ea nisi temporibus ipsam corrupti?
-          </p>
-          <a href="#" class="btn-text">Learn more &rarr;</a>
         </div>
-        <div class="col-1-of-2">
-          <div class="composition">
-            <img src="img/nat-1-large.jpg" alt="photo 1" class="composition__photo composition__photo--p1">
-            <img src="img/nat-2-large.jpg" alt="photo 2" class="composition__photo composition__photo--p2">
-            <img src="img/nat-3-large.jpg" alt="photo 3" class="composition__photo composition__photo--p3">
+        <div class="row">
+          <div class="col-1-of-2">
+            <h3 class="heading-tertiary u-margin-bottom-small">You're going to fall in love with nature</h3>
+            <p class="paragraph">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Est, distinctio assumenda ducimus sunt molestiae vel natus nihil sapiente numquam tempore ipsa qui corrupti exercitationem voluptate dolore cupiditate asperiores libero atque.
+            </p>
+            <h3 class="heading-tertiary u-margin-bottom-small">Experience adventures like you never have before</h3>
+            <p class="paragraph">
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laboriosam itaque ex nulla inventore nemo aliquam ea nisi temporibus ipsam corrupti?
+            </p>
+            <a href="#" class="btn-text">Learn more &rarr;</a>
+          </div>
+          <div class="col-1-of-2">
+            <div class="composition">
+              <img src="img/nat-1-large.jpg" alt="photo 1" class="composition__photo composition__photo--p1">
+              <img src="img/nat-2-large.jpg" alt="photo 2" class="composition__photo composition__photo--p2">
+              <img src="img/nat-3-large.jpg" alt="photo 3" class="composition__photo composition__photo--p3">
+            </div>
           </div>
         </div>
-      </div>
       </section>
       <section class="section-features">
         
@@ -103,7 +103,24 @@
           </div>
         </div>
       </section>
-      
+      <section class="section-tours">
+        <div class="u-center-text u-margin-bottom-big">
+          <h2 class="heading-secondary">
+            Most popular tours
+          </h2>
+        </div>
+        <div class="row">
+          <div class="col-1-of-3">
+            Col 1 of 3
+          </div>
+          <div class="col-1-of-3">
+            Col 1 of 3
+          </div>
+          <div class="col-1-of-3">
+            Col 1 of 3
+          </div>
+        </div>
+      </section>
     </main>
     <!--     
     <section class="grid-test">
