add card divs to section-tours row

--- a/index.html
+++ b/index.html
@@ -111,13 +111,19 @@
         </div>
         <div class="row">
           <div class="col-1-of-3">
-            Col 1 of 3
+            <div class="card">
+              Col 1 of 3
+            </div>
           </div>
           <div class="col-1-of-3">
-            Col 1 of 3
+            <div class="card">
+              Col 1 of 3
+            </div>
           </div>
           <div class="col-1-of-3">
-            Col 1 of 3
+            <div class="card">
+              Col 1 of 3
+            </div>
           </div>
         </div>
       </section>
