create _card.scss file, import it to main.scss, start card flip animation styling

--- a/index.html
+++ b/index.html
@@ -112,17 +112,19 @@
         <div class="row">
           <div class="col-1-of-3">
             <div class="card">
-              Col 1 of 3
+              <div class="card__side">
+                Text
+              </div>
             </div>
           </div>
           <div class="col-1-of-3">
             <div class="card">
-              Col 1 of 3
+              Card Text
             </div>
           </div>
           <div class="col-1-of-3">
             <div class="card">
-              Col 1 of 3
+              Card Text
             </div>
           </div>
         </div>
