--- a/index.html
+++ b/index.html
@@ -112,8 +112,11 @@
         <div class="row">
           <div class="col-1-of-3">
             <div class="card">
-              <div class="card__side">
-                Text
+              <div class="card__side card__side--front">
+                FRONT
+              </div>
+              <div class="card__side card__side--back">
+                BACK
               </div>
             </div>
           </div>
