start card styling

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
               <div class="card__side card__side--front">
                 FRONT
               </div>
-              <div class="card__side card__side--back">
+              <div class="card__side card__side--back card__side--back-1">
                 BACK
               </div>
             </div>
