finish section-tours card front styling

--- a/index.html
+++ b/index.html
@@ -117,11 +117,19 @@
                   <!-- space special character code -->
                   &nbsp;
                 </div>
-                <div class="card__heading">
-                  Heading
-                </div>
+                <h4 class="card__heading">
+                  <span class="card__heading-span card__heading-span--1">  
+                    The Sea Explorer 
+                  </span>
+                </h4>
                 <div class="card__details">
-                  Details
+                  <ul>
+                    <li>3 day tour</li>
+                    <li>Up to 30 peopl</li>
+                    <li>2 tour guides</li>
+                    <li>Sleep in cozy hotels</li>
+                    <li>Difficulty: easy</li>
+                  </ul>
                 </div>
               </div>
               <div class="card__side card__side--back card__side--back-1">
