--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                 <div class="card__details">
                   <ul>
                     <li>3 day tour</li>
-                    <li>Up to 30 peopl</li>
+                    <li>Up to 30 people</li>
                     <li>2 tour guides</li>
                     <li>Sleep in cozy hotels</li>
                     <li>Difficulty: easy</li>
@@ -145,12 +145,68 @@
           </div>
           <div class="col-1-of-3">
             <div class="card">
-              Card Text
+              <div class="card__side card__side--front">
+                <div class="card__picture card__picture--2">
+                  <!-- space special character code -->
+                  &nbsp;
+                </div>
+                <h4 class="card__heading">
+                  <span class="card__heading-span card__heading-span--2">  
+                    The Forest Hiker
+                  </span>
+                </h4>
+                <div class="card__details">
+                  <ul>
+                    <li>7 day tour</li>
+                    <li>Up to 40 people</li>
+                    <li>6 tour guides</li>
+                    <li>Sleep in provided tents</li>
+                    <li>Difficulty: medium</li>
+                  </ul>
+                </div>
+              </div>
+              <div class="card__side card__side--back card__side--back-2">
+                 <div class="card__cta">
+                   <div class="card__price-box">
+                     <p class="card__price-only">Only</p>
+                     <p class="card__price-value">$497</p>
+                   </div>
+                   <a href="#" class="btn btn--white">Book now!</a>
+                 </div>
+              </div>
             </div>
           </div>
           <div class="col-1-of-3">
             <div class="card">
-              Card Text
+              <div class="card__side card__side--front">
+                <div class="card__picture card__picture--3">
+                  <!-- space special character code -->
+                  &nbsp;
+                </div>
+                <h4 class="card__heading">
+                  <span class="card__heading-span card__heading-span--3">  
+                    The Snow Adventurer
+                  </span>
+                </h4>
+                <div class="card__details">
+                  <ul>
+                    <li>5 day tour</li>
+                    <li>Up to 15 people</li>
+                    <li>3 tour guides</li>
+                    <li>Sleep in provided tents</li>
+                    <li>Difficulty: hard</li>
+                  </ul>
+                </div>
+              </div>
+              <div class="card__side card__side--back card__side--back-3">
+                 <div class="card__cta">
+                   <div class="card__price-box">
+                     <p class="card__price-only">Only</p>
+                     <p class="card__price-value">$897</p>
+                   </div>
+                   <a href="#" class="btn btn--white">Book now!</a>
+                 </div>
+              </div>
             </div>
           </div>
         </div>
