--- a/index.html
+++ b/index.html
@@ -214,6 +214,13 @@
           <a href="#" class="btn btn--green">Discover all tours</a>
         </div>
       </section>
+      <section class="section-stories">
+        <div class="u-center-text u-margin-bottom-big">
+          <h2 class="heading-secondary">
+            We make people genuinely happy
+          </h2>
+        </div>        
+      </section>
     </main>
     <!--     
     <section class="grid-test">
