add basic story section styling

--- a/index.html
+++ b/index.html
@@ -219,7 +219,13 @@
           <h2 class="heading-secondary">
             We make people genuinely happy
           </h2>
-        </div>        
+        </div>      
+        <!-- using 'row' without columns for other stylings -->
+        <div class="row">
+          <div class="story">
+            Text
+          </div>
+        </div>
       </section>
     </main>
     <!--     
