add text elements to story div in index.html, start shape styling

--- a/index.html
+++ b/index.html
@@ -223,7 +223,15 @@
         <!-- using 'row' without columns for other stylings -->
         <div class="row">
           <div class="story">
-            Text
+            <figure class="story__shape">
+
+            </figure>
+            <div class="story__text">
+              <h3 class="heading-tertiary u-margin-bottom-small">I had the best week ever with my family</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Est, distinctio assumenda ducimus sunt molestiae vel natus nihil sapiente numquam tempore ipsa qui corrupti exercitationem voluptate dolore cupiditate asperiores libero atque.
+              </p>
+            </div>
           </div>
         </div>
       </section>
