--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
             <div class="story__text">
               <h3 class="heading-tertiary u-margin-bottom-small">I had the best week ever with my family</h3>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Est, distinctio assumenda ducimus sunt molestiae vel natus nihil sapiente numquam tempore ipsa qui corrupti exercitationem voluptate dolore cupiditate asperiores libero atque.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Est, distinctio assumenda ducimus sunt molestiae vel natus nihil sapiente numquam tempore ipsa qui corrupti exercitationem voluptate dolore cupiditate asperiores libero atque. Lorem ipsum dolor sit amet consectetur adipisicing elit.
               </p>
             </div>
           </div>
