finish styling story component

--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
         <div class="row">
           <div class="story">
             <figure class="story__shape">
-
+              <img src="img/nat-8.jpg" alt="Person on a tour" class="story__img">
             </figure>
             <div class="story__text">
               <h3 class="heading-tertiary u-margin-bottom-small">I had the best week ever with my family</h3>
