--- a/index.html
+++ b/index.html
@@ -262,6 +262,13 @@
           <a href="#" class="btn-text">Read all stories &rarr;</a>
         </div>
       </section>
+      <section class="section-book">
+        <div class="row">
+          <div class="book">
+
+          </div>
+        </div>
+      </section>
     </main>
     <!--     
     <section class="grid-test">
