--- a/index.html
+++ b/index.html
@@ -280,6 +280,16 @@
                   <input type="email" class="form__input" placeholder="Email Address" id="email" required>
                   <label for="email" class="form__label">Email Address</label>
                 </div>
+                <div class="form__group">
+                  <div class="form__radio-group">
+                    <input type="radio" class="form__radio-input" id="small" name="size">
+                    <label for="small" class="form__radio-input">Small tour group</label>
+                  </div>
+                  <div class="form__radio-group">
+                    <input type="radio" class="form__radio-input" id="large" name="size">
+                    <label for="large" class="form__radio-input">Large tour group</label>
+                  </div>
+                </div>
               </form>
             </div>
           </div>
