--- a/index.html
+++ b/index.html
@@ -283,11 +283,17 @@
                 <div class="form__group">
                   <div class="form__radio-group">
                     <input type="radio" class="form__radio-input" id="small" name="size">
-                    <label for="small" class="form__radio-input">Small tour group</label>
+                    <label for="small" class="form__radio-label">
+                      <span class="form__radio-button"></span>
+                      Small tour group
+                    </label>
                   </div>
                   <div class="form__radio-group">
                     <input type="radio" class="form__radio-input" id="large" name="size">
-                    <label for="large" class="form__radio-input">Large tour group</label>
+                    <label for="large" class="form__radio-label">
+                      <span class="form__radio-button"></span>
+                      Large tour group
+                    </label>
                   </div>
                 </div>
               </form>
