--- a/index.html
+++ b/index.html
@@ -296,6 +296,9 @@
                     </label>
                   </div>
                 </div>
+                <div class="form__group">
+                  <button class="btn btn--green">Next Step &rarr;</button>
+                </div>
               </form>
             </div>
           </div>
