--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
         </div>
         <div class="col-1-of-2">
           <p class="footer__copyright">
-            Built my <a href="#" class="footer__link">Yoichi Michael Footer</a> for his nature tours clone <a href="#" class="footer__link">Natours</a>. Copyright &copy; by Jonas Schmedtmann. You are 100% allowed to use this webpage for both personal and commercial use, but NOT to claim it as your own design. A credit to the original designer, Jonas Schmedtmann, is of course highly appreciated!
+            Built by <a href="#" class="footer__link">Yoichi Michael Nagano</a> as a clone of <a href="#" class="footer__link">Natours</a>. Copyright &copy; by Jonas Schmedtmann. You are 100% allowed to use this webpage for both personal and commercial use, but NOT to claim it as your own design. A credit to the original designer, Jonas Schmedtmann, is of course highly appreciated!
           </p>
         </div>
       </div>
