add nav elements to html

--- a/index.html
+++ b/index.html
@@ -14,6 +14,23 @@
 		<title>Natours | Exciting tours for adventurous people</title>
 	</head>
 	<body>
+
+    <div class="navigation">
+      <input type="checkbox" class="navigation__checkbox" id="navi-toggle">
+      <label for="navi-toggle" class="navigation__button">MENU</label>
+      <!-- &nbsp; is the special white space symbol -->
+      <div class="navigation__background">&nbsp;</div>
+      <nav class="navigation__nav">
+        <ul class="navigation__list">
+          <li class="navigation__item"><a href="#" class="navigation__link"></a>About Natours</li>
+          <li class="navigation__item"><a href="#" class="navigation__link"></a>Benefits</li>
+          <li class="navigation__item"><a href="#" class="navigation__link"></a>Popular Tours</li>
+          <li class="navigation__item"><a href="#" class="navigation__link"></a>Stories</li>
+          <li class="navigation__item"><a href="#" class="navigation__link"></a>Book now</li>
+        </ul>
+      </nav>
+    </div>
+
 		<!-- applying redundant-seeming class name because we want one for every element -->
 		<header class="header">
 			<!-- putting img inside div for easier positioning -->
