--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
       <div class="navigation__background">&nbsp;</div>
       <nav class="navigation__nav">
         <ul class="navigation__list">
-          <li class="navigation__item"><a href="#" class="navigation__link"></a>About Natours</li>
-          <li class="navigation__item"><a href="#" class="navigation__link"></a>Benefits</li>
-          <li class="navigation__item"><a href="#" class="navigation__link"></a>Popular Tours</li>
-          <li class="navigation__item"><a href="#" class="navigation__link"></a>Stories</li>
-          <li class="navigation__item"><a href="#" class="navigation__link"></a>Book now</li>
+          <li class="navigation__item"><a href="#" class="navigation__link">About Natours</a></li>
+          <li class="navigation__item"><a href="#" class="navigation__link">Benefits</a></li>
+          <li class="navigation__item"><a href="#" class="navigation__link">Popular Tours</a></li>
+          <li class="navigation__item"><a href="#" class="navigation__link">Stories</a></li>
+          <li class="navigation__item"><a href="#" class="navigation__link">Book now</a></li>
         </ul>
       </nav>
     </div>
