add popup elements

--- a/index.html
+++ b/index.html
@@ -358,6 +358,12 @@
         </div>
       </div>
     </footer>
+    <!-- this section can really go anywher as it's not tied to a specific location -->
+    <div class="popup">
+      <div class="popup__content">
+        Popup
+      </div>
+    </div>
 
     <!--     
     <section class="grid-test">
