--- a/index.html
+++ b/index.html
@@ -361,7 +361,18 @@
     <!-- this section can really go anywher as it's not tied to a specific location -->
     <div class="popup">
       <div class="popup__content">
-        Popup
+        <div class="popup__left">
+          <img src="img/nat-8.jpg" alt="tour photo" class="popup__img">
+          <img src="img/nat-9.jpg" alt="tour photo" class="popup__img">
+        </div>
+        <div class="popup__right">
+          <h2 class="heading-secondary">Start Booking Now</h2>
+          <h3 class="heading-tertiary">Important &ndash; Please read these terms before booking</h3>
+          <p class="popup__text">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Augue neque gravida in fermentum et sollicitudin. Tincidunt ornare massa eget egestas purus viverra accumsan. At auctor urna nunc id cursus metus aliquam. Bibendum arcu vitae elementum curabitur vitae nunc. Sit amet massa vitae tortor condimentum. Magna ac placerat vestibulum lectus mauris ultrices. Facilisi cras fermentum odio eu feugiat pretium nibh ipsum consequat. Felis imperdiet proin fermentum leo. Tristique senectus et netus et malesuada fames ac turpis egestas.
+          </p>
+          <a href="#" class="btn btn--green">Book now</a>
+        </div>
       </div>
     </div>
 
