--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
           </div>
         </div>
       </section>
-      <section class="section-tours">
+      <section class="section-tours" id="section-tours">
         <div class="u-center-text u-margin-bottom-big">
           <h2 class="heading-secondary">
             Most popular tours
@@ -158,7 +158,7 @@
                      <p class="card__price-only">Only</p>
                      <p class="card__price-value">$297</p>
                    </div>
-                   <a href="#" class="btn btn--white">Book now!</a>
+                   <a href="#popup" class="btn btn--white">Book now!</a>
                  </div>
               </div>
             </div>
@@ -191,7 +191,7 @@
                      <p class="card__price-only">Only</p>
                      <p class="card__price-value">$497</p>
                    </div>
-                   <a href="#" class="btn btn--white">Book now!</a>
+                   <a href="#popup" class="btn btn--white">Book now!</a>
                  </div>
               </div>
             </div>
@@ -224,7 +224,7 @@
                      <p class="card__price-only">Only</p>
                      <p class="card__price-value">$897</p>
                    </div>
-                   <a href="#" class="btn btn--white">Book now!</a>
+                   <a href="#popup" class="btn btn--white">Book now!</a>
                  </div>
               </div>
             </div>
@@ -359,13 +359,14 @@
       </div>
     </footer>
     <!-- this section can really go anywher as it's not tied to a specific location -->
-    <div class="popup">
+    <div class="popup" id="popup">
       <div class="popup__content">
         <div class="popup__left">
           <img src="img/nat-8.jpg" alt="tour photo" class="popup__img">
           <img src="img/nat-9.jpg" alt="tour photo" class="popup__img">
         </div>
         <div class="popup__right">
+          <a href="#section-tours" class="popup__close">&times;</a>
           <h2 class="heading-secondary u-margin-bottom-small">Start Booking Now</h2>
           <h3 class="heading-tertiary u-margin-bottom-small">Important &ndash; Please read these terms before booking</h3>
           <p class="popup__text">
