modify media query for tour card flip to accomodate non-hover devices at wide widths

--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8">
+    
+    <!-- this makes the page fit whatever screen is opening it -->
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		
 		<!-- pre-loaded lato font -->
